# aws-synthetic-state

./: Cargo.toml  README.md  formation.yml
.github/workflows/: clippy.yml
src/: main.rs
